# xiaogouomsi

./: APPLICATION_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SHA256SUMS.txt  TRADEMARKS.md  protocol.json
docs/: ARCHITECTURE.md  AUTO_HEADLIGHTS.md  VEHICLE_ADAPTER_GUIDE.md
examples/cpp/: auto_headlights_example.cpp  vehicle_adapter_example.cpp
examples/python/: local_command_demo.py  signed_request_example.py
include/: xiaogou_remote_open.h
